--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 			color: red;
 			font-size: 30px;
 		}
+		.leftpart {
+			width: 30%;
+			text-align: right;
+			border: 1px solid black;
+			
+		}
+		.rightpart {
+			
+		}
 	</style>
 </head>
 <body>
