amazing css update - fonts and all

--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
 	<title>Моята лична страница</title>
 	<style type="text/css">
 		h1 {
-			color: red;
+			
 			font-size: 30px;
+			font-style: bold;
+		}
+		body {
+			
+			font-family: helvetica, arial, sans-serif;
 		}
 		.leftpart {
+			box-sizing: border-box;
+			padding: 5px;
 			width: 30%;
+			float: left;
 			text-align: right;
-			border: 1px solid black;
-			
+			border-right: 1px solid black;
+				
 		}
 		.rightpart {
+			width: 68%;
+			float: right;
 			
 		}
 	</style>
