--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
 	<title>Моята лична страница</title>
 	<style type="text/css">
+		html, body, .leftpart {
+			height: 100%;
+		}
 		h1 {
 			
 			font-size: 30px;
 			font-style: bold;
 		}
+		.hidden {
+			visibility: hidden;
+		}
 		body {
-			
+			margin: 0;
+			overflow: hidden;
 			font-family: helvetica, arial, sans-serif;
 		}
 		.leftpart {
 			box-sizing: border-box;
-			padding: 5px;
+			padding-right: 5px;
 			width: 30%;
 			float: left;
 			text-align: right;
 			border-right: 1px solid black;
-				
 		}
 		.rightpart {
 			width: 68%;
@@ -30,11 +36,12 @@
 </head>
 <body>
 	<div class="leftpart">
-		<h1>Марта Радева</h1>
-		<p>Добре дошли на личната ми страница. Тук може да намерите връзки за присъствието ми в интернет.</p>
+		<h1 class="myname">Мартина Радева</h1>
+		<p class"descr-text">Добре дошли на личната ми страница. Тук може да намерите връзки за присъствието ми в интернет.</p>
 	</div>
 
 	<div class="rightpart">
+		<h1 class="hidden">Мартина Радева</h1>
 		<p>m: <a href="mailto:martaradeva@gmail.com">martaradeva@gmail.com</a></p>
 		<p>t: 1234566789</p>
 		<p>e: <a href="https://www.facebook.com/martaradeva" class="facebook">facebook.com/martaradeva</a></p>
