--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 		<p><a href="mailto:martaradeva@gmail.com">email</a></p>
 		<p><a href="https://www.facebook.com/martaradeva" class="facebook">facebook</a></p>
 		<p><a href="https://www.linkedin.com/in/martaradeva">linkedin</a></p>
+		<p><a href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19">portfolio</a></p>
 	</div>
 </body>
 </html>
