organize and link bg image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			margin: 75px;
 			overflow: hidden;
 			font-family: helvetica, arial, sans-serif;
-			background-image: url("http://www.unsigneddesign.com/Essential%20Grunge/grunge1.jpg");
+			background-image: url("bg.png");
 			background-repeat: no-repeat;
 			background-size: 100% auto;
 		}
