--- a/bg/index.html
+++ b/bg/index.html
@@ -6,21 +6,31 @@
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body>
-	<div class="leftpart">
-		<h1 class="myname">Мартина Радева</h1>
-		<div class="descr-text">Добре дошли на личната ми страница. 
-			<p>Тук може да намерите връзки за присъствието ми в интернет.</p>
-			<p><a href="../en/index.html">This site in English</a></p>
-		</div>
-	</div>
-
-	<div class="rightpart">
-		<h1 class="hidden">Мартина Радева</h1>
-		<p><a href="mailto:martaradeva@gmail.com">email</a></p>
-		<p><a href="https://www.facebook.com/martaradeva" class="facebook">facebook</a></p>
-		<p><a href="https://www.linkedin.com/in/martaradeva">linkedin</a></p>
-		<p><a href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19">portfolio</a></p>
-		
-	</div>
+	<table border="1">
+		<tr> 
+			<td><h1 class="tdleft">Мартина Радева</h1></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>
+				<div class="tdleft">
+					Добре дошли на личната ми страница. 
+					Тук може да намерите връзки за присъствието ми в интернет.
+				</div>
+			</td>
+			<td> 
+				<div class="tdright">
+					<p><a class="mail" href="mailto:martaradeva@gmail.com">email</a></p>
+					<p><a class="fb" href="https://www.facebook.com/martaradeva" class="facebook">facebook</a></p>
+					<p><a class="linkedin" href="https://www.linkedin.com/in/martaradeva">linkedin</a></p>
+					<p><a class="pf" href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19">portfolio</a></p>
+				</div>		
+			</td>
+		</tr>
+		<tr>
+			<td><a class="tdleft" href="../en/index.html">This site in English</a></td>
+			<td></td>
+		</tr>
+	</table>	
 </body>
 </html>
