--- a/en/index.html
+++ b/en/index.html
@@ -16,10 +16,10 @@
 
 	<div class="rightpart">
 		<h1 class="hidden">Martina Radeva</h1>
-		<p><a href="mailto:martaradeva@gmail.com">email</a></p>
-		<p><a href="https://www.facebook.com/martaradeva" class="facebook">facebook</a></p>
-		<p><a href="https://www.linkedin.com/in/martaradeva">linkedin</a></p>
-		<p><a href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19">portfolio</a></p>
+		<p><a class="mail" href="mailto:martaradeva@gmail.com">email</a></p>
+		<p><a class="fb" href="https://www.facebook.com/martaradeva" class="facebook">facebook</a></p>
+		<p><a class="linkedin" href="https://www.linkedin.com/in/martaradeva">linkedin</a></p>
+		<p><a class="pf" href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19">portfolio</a></p>
 		
 	</div>
 </body>
