--- a/bg/index.html
+++ b/bg/index.html
@@ -6,30 +6,27 @@
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body>
-	<table border="1">
+	<table class="tt" border="1">
 		<tr> 
-			<td><h1 class="tdleft">Мартина Радева</h1></td>
-			<td></td>
+			<td class="tdleft"><h1>Мартина Радева
+			</h1></td>
+			<td class="tdright"><img src="../images/profile.png" width="128px"></td>
 		</tr>
 		<tr>
-			<td>
-				<div class="tdleft">
-					Добре дошли на личната ми страница. 
-					Тук може да намерите връзки за присъствието ми в интернет.
-				</div>
+			<td class="tdleft">
+				Добре дошли на личната ми страница.<br> 
+				Тук може да намерите връзки за присъствието ми в интернет. 
 			</td>
-			<td> 
-				<div class="tdright">
-					<p><a class="mail" href="mailto:martaradeva@gmail.com">email</a></p>
-					<p><a class="fb" href="https://www.facebook.com/martaradeva" class="facebook">facebook</a></p>
-					<p><a class="linkedin" href="https://www.linkedin.com/in/martaradeva">linkedin</a></p>
-					<p><a class="pf" href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19">portfolio</a></p>
-				</div>		
+			<td class="tdright"> 
+				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail">  </a>
+				<a class="imglink" href="https://www.facebook.com/martaradeva"><img src="../images/social/facebook.png" border= "0" title="facebook"></a>
+				<a class="imglink" href="https://www.linkedin.com/in/martaradeva"><img src="../images/social/linkedin.png" border= "0" title="linked in"></a>
+				<a class="imglink" href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19"><img src="../images/social/portfolio.png" border= "0" title="portfolio"></a>
 			</td>
 		</tr>
 		<tr>
-			<td><a class="tdleft" href="../en/index.html">This site in English</a></td>
-			<td></td>
+			<td class="tdleft"><a  href="../en/index.html">This site in English</a></td>
+			<td class="tdright"></td>
 		</tr>
 	</table>	
 </body>
