bg-en-and all pink.
bg-en-and all pink.

--- a/en/index.html
+++ b/en/index.html
@@ -6,21 +6,34 @@
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body>
-	<div class="leftpart">
-		<h1 class="myname">Martina Radeva</h1>
-		<div class="descr-text">Welcome to my personal webpage.
-			<p>Here you can find links to my online self.</p>
-			<p><a href="../bg/index.html">Страницата на български</a></p>
-		</div>
-	</div>
-
-	<div class="rightpart">
-		<h1 class="hidden">Martina Radeva</h1>
-		<p><a class="mail" href="mailto:martaradeva@gmail.com">email</a></p>
-		<p><a class="fb" href="https://www.facebook.com/martaradeva" class="facebook">facebook</a></p>
-		<p><a class="linkedin" href="https://www.linkedin.com/in/martaradeva">linkedin</a></p>
-		<p><a class="pf" href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19">portfolio</a></p>
-		
-	</div>
+	<html>
+<head>
+	<title>Martina Radeva</title>
+	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
+</head>
+<body>
+	<table class="tt" border="1">
+		<tr> 
+			<td class="tdleft"><h1>Martina Radeva
+			</h1></td>
+			<td class="tdright"><img src="../images/profile.png" width="128px"></td>
+		</tr>
+		<tr>
+			<td class="tdleft">
+				Welcome to my personal homepage.<br> 
+				Here you can find links to my profile in various social networks.
+			</td>
+			<td class="tdright"> 
+				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail">  </a>
+				<a class="imglink" href="https://www.facebook.com/martaradeva"><img src="../images/social/facebook.png" border= "0" title="facebook"></a>
+				<a class="imglink" href="https://www.linkedin.com/in/martaradeva"><img src="../images/social/linkedin.png" border= "0" title="linked in"></a>
+				<a class="imglink" href="http://issuu.com/noe3/docs/pf-martina-radeva-2013-09-19"><img src="../images/social/portfolio.png" border= "0" title="portfolio"></a>
+			</td>
+		</tr>
+		<tr>
+			<td class="tdleft"><a  href="../bg/index.html">Страницата на български</a></td>
+			<td class="tdright"></td>
+		</tr>
+	</table>	
 </body>
 </html>
