--- a/bg/index.html
+++ b/bg/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body>
-	<table class="tt" border="1">
+	<table class="tt">
 		<tr> 
 			<td class="tdleft"><h1>Мартина Радева
 			</h1></td>
