size-of-buttons

--- a/en/index.html
+++ b/en/index.html
@@ -12,11 +12,11 @@
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body>
-	<table class="tt">
+	<table class="tt" border="1">
 		<tr> 
 			<td class="tdleft"><h1>Martina Radeva
 			</h1></td>
-			<td class="tdright"><img src="../images/profile.png" width="128px"></td>
+			<td class="tdright"><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
