working bg version with working css

--- a/bg/index.html
+++ b/bg/index.html
@@ -10,7 +10,7 @@
 		<tr> 
 			<td class="tdleft"><h1>Мартина Радева
 			</h1></td>
-			<td class="pr-image"><img src="../images/profile_sm.png"></td>
+			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
