and now (drumroll) with working ruby!

--- a/bg/index.html
+++ b/bg/index.html
@@ -14,8 +14,7 @@
 		</tr>
 		<tr>
 			<td class="tdleft">
-				Добре дошли на личната ми страница.<br> 
-				Тук може да намерите връзки за присъствието ми в интернет. 
+				Добре дошли на личната ми страница.<br>Тук може да намерите връзки за присъствието ми в интернет.
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
