--- a/bg/index_2.html
+++ b/bg/index_2.html
@@ -2,19 +2,20 @@
 <!-- BULGARIAN version -->
 <html>
 <head>
-	<title>Martina Radeva</title>
+	<title>Мартина Радева</title>
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body>
 	<table class="tt">
 		<tr> 
-			<td class="tdleft"><h1>Martina Radeva
+			<td class="tdleft"><h1>Мартина Радева
 			</h1></td>
 			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
-				Welcome to my personal homepage.<br>Here you can find links to my profile in various social networks.
+				Добре дошли на личната ми страница.<br> 
+				Тук може да намерите връзки за присъствието ми в интернет. 
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
@@ -24,7 +25,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="tdleft"><a  href="../bg/index.html">Страницата на български</a></td>
+			<td class="tdleft"><a  href="../en/index.html">This site in English</a></td>
 			<td class="tdright"></td>
 		</tr>
 	</table>	
