--- a/en/index1.html
+++ b/en/index1.html
@@ -24,7 +24,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="tdleft"><a  href="../bg/index.html">Страницата на български</a></td>
+			<td class="tdleft"><a  href="../bg/index1.html">Страницата на български</a></td>
 			<td class="tdright"></td>
 		</tr>
 	</table>	
