wip ruby - hashes, separate html template,

--- a/template.html
+++ b/template.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<!-- BULGARIAN version -->
 <html>
 <head>
-	<title>Martina Radeva</title>
+	<title>%{name_title}</title>
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body>
 	<table class="tt">
 		<tr> 
-			<td class="tdleft"><h1>Martina Radeva
+			<td class="tdleft"><h1>%{name_title}
 			</h1></td>
 			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
-				Welcome to my personal homepage.<br>Here you can find links to my profile in various social networks.
+				%{text}
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
@@ -24,7 +23,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="tdleft"><a  href="../bg/index.html">Страницата на български</a></td>
+			<td class="tdleft">%{hlink}</td>
 			<td class="tdright"></td>
 		</tr>
 	</table>
