separate html template

--- a/template.html
+++ b/template.html
@@ -7,13 +7,14 @@
 <body>
 	<table class="tt">
 		<tr> 
-			<td class="tdleft"><h1>%{name_title}
-			</h1></td>
+			<td class="tdleft"><h1>%{name_title}</h1></td>
 			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
 				%{text}
+				<br>
+				%{text1}
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
