using hash keys to create urls!

--- a/bg/index.html
+++ b/bg/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- BULGARIAN version -->
 <html>
 <head>
 	<title>Мартина Радева</title>
@@ -8,13 +7,14 @@
 <body>
 	<table class="tt">
 		<tr> 
-			<td class="tdleft"><h1>Мартина Радева
-			</h1></td>
+			<td class="tdleft"><h1>Мартина Радева</h1></td>
 			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
-				Добре дошли на личната ми страница.<br>Тук може да намерите връзки за присъствието ми в интернет.
+				Добре дошли на личната ми страница.
+				<br>
+				Тук може да намерите връзки за присъствието ми в интернет.
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
