--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- BULGARIAN version -->
 <html>
 <head>
 	<title>Martina Radeva</title>
@@ -8,13 +7,14 @@
 <body>
 	<table class="tt">
 		<tr> 
-			<td class="tdleft"><h1>Martina Radeva
-			</h1></td>
+			<td class="tdleft"><h1>Martina Radeva</h1></td>
 			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
-				Welcome to my personal homepage.<br>Here you can find links to my profile in various social networks.
+				Welcome to my personal homepage.
+				<br>
+				Here you can find links to my profile in various social networks.
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
