no html in ruby code!

--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="tdleft">%{hlink}</td>
+			<td class="tdleft"><a  href="%{language_link}">%{language_link_text}</a></td>
 			<td class="tdright"></td>
 		</tr>
 	</table>
