static language bar with links

--- a/bg/index.html
+++ b/bg/index.html
@@ -24,7 +24,10 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="tdleft"><a  href="../en/index.html">This site in English</a></td>
+			<td class="tdleft">
+				<a  href="../bg/index.html">bg</a>
+				<a  href="../en/index.html">en</a>
+			</td>
 			<td class="tdright"></td>
 		</tr>
 	</table>
