--- a/template.html
+++ b/template.html
@@ -24,7 +24,10 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="tdleft"><a  href="%{language_link}">%{language_link_text}</a></td>
+			<td class="tdleft">
+				<a  href="../bg/index.html">bg</a>
+				<a  href="../en/index.html">en</a>
+			</td>
 			<td class="tdright"></td>
 		</tr>
 	</table>
