patched active language sorta working

--- a/template.html
+++ b/template.html
@@ -25,8 +25,10 @@
 		</tr>
 		<tr>
 			<td class="tdleft">
-				<a  href="../bg/index.html">bg</a>
-				<a  href="../en/index.html">en</a>
+				<div class="%{lang_check}">
+					<a class="bgl" href="../bg/index.html">bg</a>
+					<a class="enl" href="../en/index.html">en</a>
+				</div>
 			</td>
 			<td class="tdright"></td>
 		</tr>
