active language link
dynamic adding to hash,  classes and css fixed

--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
 	<title>Martina Radeva</title>
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
-<body>
+<body class="en">
 	<table class="tt">
 		<tr> 
 			<td class="tdleft"><h1>Martina Radeva</h1></td>
@@ -25,10 +25,8 @@
 		</tr>
 		<tr>
 			<td class="tdleft">
-				<div class="enl">
-					<a class="bgl" href="../bg/index.html">bg</a>
-					<a class="enl" href="../en/index.html">en</a>
-				</div>
+				<a class="bg" href="../bg/index.html">bg</a>
+				<a class="en" href="../en/index.html">en</a>
 			</td>
 			<td class="tdright"></td>
 		</tr>
