--- a/rubytest/index.html
+++ b/rubytest/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%= language_current[:name_title] %></title>
+	<title>Мартина Радева</title>
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
 <body class="%{current_language}">
 	<table class="tt">
 		<tr> 
-			<td class="tdleft"><h1><%= language_current[:name_title] %></h1></td>
+			<td class="tdleft"><h1>Мартина Радева</h1></td>
 			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
-				<%= language_current[:text] %>
+				Добре дошли на личната ми страница.
 				<br>
-				<%= language_current[:text1] %>
+				Тук може да намерите връзки за присъствието ми в интернет.
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
