generate.rb working with 2 languages AND ERB template

--- a/rubytest/en/index.html
+++ b/rubytest/en/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%= content[:name_title] %></title>
+	<title>Martina Radeva</title>
 	<link rel="stylesheet" type="text/css" href="../styles/marta.css">
 </head>
-<body <%= 'class="' + content[:id].to_s + '"' %>>
+<!-- <body class="en"> -->
+<body class="en">
 	<table class="tt">
 		<tr> 
-			<td class="tdleft"><h1><%= content[:name_title] %></h1></td>
+			<td class="tdleft"><h1>Martina Radeva</h1></td>
 			<td><img class="pr-image" src="../images/profile_sm.png"></td>
 		</tr>
 		<tr>
 			<td class="tdleft">
-				<%= content[:text] %>
+				Welcome to my personal homepage.
 				<br>
-				<%= content[:text1] %>
+				Here you can find links to my profile in various social networks.
 			</td>
 			<td class="tdright"> 
 				<a class="imglink" href="mailto:martaradeva@gmail.com"><img src="../images/social/email.png" border= "0" title="e-mail"></a>
